# llexp

./: CMakeLists.txt  LICENSE  README.md  benchmark_all_versions.sh  benchmark_record_results.sh  benchmark_v1_record_results.sh  benchmark_v1_results_date_210220.md  benchmark_v2_record_results.sh  benchmark_v2_results_date_210217_Feb021613565531_std_queue_hw_not_tuned.txt  benchmark_v2_results_date_210218_Feb021613682643_std_queue_isolcpus.md  benchmark_v2_results_date_210220.md  call_graph.out  long_run_benchmark.sh  perf_record_benchmark.sh  perf_run_benchmark_v1.sh  run_benchmark.sh  run_benchmark_compare_all.sh  run_benchmark_v1.sh  run_benchmark_v2.sh
clocks/: CMakeLists.txt  alignment.c  bench_pingpong_asm.cpp  bench_pingpong_atomic.cpp  bench_pingpong_rdtsc.cpp  bench_pingpong_rdtscp.cpp  bench_pingpong_rdtscp_stream.cpp  bench_pingpong_simple.cpp  bench_pingpong_wait.cpp  bench_pingpong_wait.cpp_bk  bench_rdtsc.cpp  bench_rdtscp.cpp  bench_simple.cpp  ¬
common/: common.h  message_stats.h
llnet/: tcp_relay.cpp
llpool/: CMakeLists.txt  arena_allocator.h  arena_harness.cpp  arena_pool.cpp  arena_pool.h  lllib.h  llpool.h  llrule.h  parser.cpp  parser.h  rule_loader.cpp  segment_allocator.h
prot/: CMakeLists.txt  boost_ipc_vector.cpp  client.cpp  consume.cpp  consume_col.cpp  create.cpp  create_col.cpp  destroy.cpp  fill.cpp  fill_col.cpp  get.cpp  get_col.cpp  harness_prot.cpp  lldb.cpp  lldb.h  protocol.h  pshm_ucase.h  pshm_ucase_bounce.c  pshm_ucase_send.c  scoped_alloc.cpp  seg.h  server.cpp  set.cpp  shm_col.h  shm_col_test.cpp  shmdb.cpp
queue/: CMakeLists.txt  bench_2w1r_boost_lockfree.cpp  bench_2w1r_boost_spsc_lockfree.cpp  queue_2w1r_boost_lockfree.h  queue_2w1r_boost_spsc_lockfree.h
results/: benchmark1_compare_210302.md  benchmark_compare_210228.md  latency_throughput_2wr1_boost_lockfree.md  latency_throughput_2wr1_boost_lockfree2.md  latency_throughput_2wr1_compare.md  pingpong_210307.md  pingpong_compare_210311.md  pingpong_compare_210313.md  pingpong_compare_asm_20210318.md  plot_benchmark1_results_barh.py  run_pingpong_rdtscp_vs_asm_20210818.md  target_architecture.md
scripts/: call_graph.out  latency_throughput_2wr1_boost_lockfree.sh  latency_throughput_2wr1_boost_spsc_lockfree.sh  latency_throughput_2wr1_compare.sh  long_run_benchmark.sh  make_call_graph.py  out.perf-folded  perf.data  perf.data.old  perf_record_benchmark.sh  perf_run.out  plot_avb_barchart.py  plot_benchmark1_results_barv.py  run_benchmark.sh  run_benchmark1_compare_all.sh  run_benchmark_compare_all.sh  run_pingpong.sh  run_pingpong_compare_all.sh  run_pingpong_compare_atomic.sh  run_pingpong_rdtscp_vs_asm.sh  run_pingpong_wait.sh
threads/: CMakeLists.txt  affinity.cpp  boost_circular_buffer_example.cpp  common.h  message_stats.h  queue_bench.cpp  queue_bench_v1_mutex.cpp  queue_bench_v1a_mutex_drain.cpp  queue_bench_v1b_mutex_circular.cpp  queue_bench_v1c_mutex_drain_circular.cpp  queue_bench_v2_pthread_spinlock_std_queue.cpp  queue_bench_v2_spinlock.cpp  queue_bench_v2a_spinlock_drain.cpp  queue_bench_v2b_spinlock_circular.cpp  queue_bench_v2c_spinlock_drain_circular.cpp  queue_bench_v3_boost_lockfree.cpp  queue_bench_v3a_boost_lockfree_drain.cpp  queue_v1_mutex.h  queue_v1b_mutex_circular.h  queue_v2_pthread_spinlock_std_queue.h  queue_v2_spinlock.h  queue_v2b_spinlock_circular.h  queue_v3_boost_lockfree.h  queue_wrapper.h  simple.cpp
